--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "web3-penguin-house",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": {
+    "name": "retconned",
+    "email": "retcnned@gmail.com",
+    "twitter": "@retconned_"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
